--- a/public/index.html
+++ b/public/index.html
@@ -48,12 +48,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" id="brand">Korral</a>
+                <a style="margin-top:-5px;"class="navbar-brand" href="#"><img src="images/logo.png" style="width:30px;height:auto;">Korral</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li><button style="margin-top:7px;"type="button" class="btn btn-default"><a style="
+
+            <li><button style="margin-top:7px;word-space:20px;"type="button" class="btn btn-default"><a style="
     color: #777; text-align:center;" href="#" data-toggle="modal" data-target="#myModal">+ New Category</a></button></li>
         </ul>
 
